--- a/Com.ChatR.Web/Style/main.css
+++ b/Com.ChatR.Web/Style/main.css
@@ -1,76 +1,3 @@
-﻿body {
-}
+*{box-sizing:border-box;margin:0;padding:0}body{background-color:black;color:white}.block-group{*zoom:1}.block-group:before,.block-group:after{display:table;content:"";line-height:0}.block-group:after{clear:both}.block-group{list-style-type:none;padding:0;margin:0}.block-group>.block-group{clear:none;float:left;margin:0 !important}.block{float:left;width:100%}.error-message{color:red;font-style:italic}a{color:white !important}.label,.field{width:50%}.field input{max-width:100%}.btn{display:inline-block;padding:10px;text-decoration:none;border-radius:5px;border:1px solid #fff;margin:5px;text-transform:uppercase;font-size:10px}.btn:hover{background-color:aquamarine}.login-wrapper{margin:150px auto 0;width:270px;border:1px solid white;padding:10px}
 
-.messagesDiv {
-    width: 400px;
-    height: 400px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    display: block;
-    float: left;
-    border-radius:10px;
-    border:1px solid black;
-    margin:15px;
-}
-
-.serverMessage {
-    display: block;
-    float: left;
-    padding: 10px;
-    margin: 5px;
-    border: 1px solid #3c8dbc;
-    border-radius: 10px;
-    background-color: #3c8dbc;
-    color: white;
-}
-
-.serverUserName {
-    display: block;
-    float: left;
-    padding: 5px;
-    margin: 5px;
-    border: 1px solid #3c8dbc;
-    border-radius: 12px;
-    background-color: #3c8dbc;
-    color: white;
-}
-
-.clientMessage {
-    display: block;
-    float: right;
-    padding: 10px;
-    margin: 5px;
-    border: 1px solid #dd4b39;
-    border-radius: 12px;
-    background-color: #dd4b39;
-    color: white;
-}
-
-.clientUserName {
-    display: block;
-    float: right;
-    padding: 5px;
-    margin: 5px;
-    margin-right: 25px;
-    border: 1px solid #dd4b39;
-    border-radius: 12px;
-    background-color: #dd4b39;
-    color: white;
-}
-
-.chatItem {
-    display: block;
-    width: 400px;
-    margin: 5px;
-    overflow: hidden;
-}
-
-.userItem {
-    display: block;
-    padding: 4px;
-    margin: 4px;
-    border-radius: 5px;
-    background-color: darkgreen;
-    color: white;
-    text-align: center;
-}
+/*# sourceMappingURL=main.css.map */
