React router included StoreJs included New user registration route added Wildcard mapping gor chat folder added for using BrowserHistory

--- a/Com.ChatR.Web/Style/_grid.scss
+++ b/Com.ChatR.Web/Style/_grid.scss
@@ -32,3 +32,15 @@
     float: left;
     width: 100%;
 }
+
+.col-75{
+    width:75%;
+}
+
+.col-50{
+    width:50%;
+}
+
+.col-25{
+    width:25%;
+}
