--- a/Com.ChatR.Web/Style/main.scss
+++ b/Com.ChatR.Web/Style/main.scss
@@ -1,15 +1,26 @@
-﻿* {
+﻿@import "variables";
+
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 body {
-    background-color: black;
-    color: white;
+    background-color:$background-color;
+    color: $primary-color;
+    font-family:$primary-font;
+    font-weight:normal;
+    font-size:$font-base-size;
 }
 
 @import "grid";
-@import "component";
 
+.block-group{
+    padding-bottom:$default-padding;
+}
+@import "component";
+@import "common";
 @import "loginform";
+@import "register";
+@import "createroom";
