--- a/Com.ChatR.Web/Style/_component.scss
+++ b/Com.ChatR.Web/Style/_component.scss
@@ -1,10 +1,15 @@
-﻿.error-message {
-    color: red;
+﻿@import "_variables.scss";
+.error-message {
+    color: $primary-error;
     font-style: italic;
+    font-size:$font-base-size*.75;
 }
 
 a {
-    color: white !important;
+    color: $anchor-color;
+}
+a:hover{
+    color: $primary-color;
 }
 
 .label, .field{
@@ -13,20 +18,38 @@ a {
 
 .field input{
     max-width:100%;
+    width:100%;
+    padding:$default-padding/2;
+
+    &[type="text"], &[type="password"]{
+        border-radius:5px;
+        border-color:$border-primary;
+        border-width:1px;
+    }
 }
 
 
 .btn{
     display:inline-block;
-    padding:10px;
+    padding:$default-padding;
     text-decoration:none;
     border-radius:5px;
-    border:1px solid #fff;
+    color:$button-text-color;
+    border:1px solid $border-primary;
     margin:5px;
     text-transform:uppercase;
-    font-size:10px;
+    font-size:$font-base-size * .8;
 
     &:hover{
-        background-color:aquamarine;
+        background-color:invert($button-background);
+        color:$background-color;
     }
+}
+
+//Headings
+.primary-heading{
+    font-size:$font-base-size * 1.4;
+    text-transform:uppercase;
+    border-bottom: 1px solid $border-primary;
+    margin-bottom:$default-padding;
 }
