--- a/Com.ChatR.Web/Style/_loginform.scss
+++ b/Com.ChatR.Web/Style/_loginform.scss
@@ -1,7 +1,8 @@
-﻿.login-wrapper {
-    margin: 150px auto 0;
-    width: 270px;
-    border: 1px solid white;
-    padding: 10px;
+﻿@import "_variables.scss";
+.login-wrapper {
+    margin:150px auto 0;
+    min-width:300px;
+    max-width:768px;
+    @extend .wrapper-common;
 }
 
