--- a/Com.ChatR.Web/Style/_common.scss
+++ b/Com.ChatR.Web/Style/_common.scss
@@ -1,7 +1,22 @@
 ﻿@import "variables";
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background-color:$background-color;
+    color: $primary-color;
+    font-family:$primary-font;
+    font-weight:normal;
+    font-size:$font-base-size;
+    padding:$default-padding;
+}
+
 .wrapper-common{
     padding: $default-padding;
-    margin: 150px auto 0;
+    margin: 75px auto 0;
     border:1px solid $border-primary;
     border-radius:5px;
 }
